recursion.cons.lessons.recursion.cons.Occurrence.scala.error
occurences:4: error: not found: value list
if(list.head==v) 
   ^